@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,6 +21,7 @@ import java.lang.annotation.Annotation;
 import java.lang.annotation.Documented;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Inherited;
+import java.lang.annotation.Repeatable;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
@@ -32,6 +33,7 @@ import java.util.Set;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.core.annotation.AliasFor;
+import org.springframework.core.annotation.AnnotatedElementUtils;
 import org.springframework.core.annotation.AnnotationAttributes;
 import org.springframework.core.testfixture.stereotype.Component;
 import org.springframework.core.type.classreading.MetadataReader;
@@ -90,7 +92,7 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isTrue();
 		assertThat(metadata.hasSuperClass()).isTrue();
 		assertThat(metadata.getSuperClassName()).isEqualTo(AnnotatedComponent.class.getName());
-		assertThat(metadata.getInterfaceNames().length).isEqualTo(0);
+		assertThat(metadata.getInterfaceNames()).isEmpty();
 		assertThat(metadata.isAnnotated(Component.class.getName())).isFalse();
 		assertThat(metadata.isAnnotated(Scope.class.getName())).isFalse();
 		assertThat(metadata.isAnnotated(SpecialAttr.class.getName())).isFalse();
@@ -114,7 +116,7 @@ class AnnotationMetadataTests {
 		assertThat(metadata.getAnnotationAttributes(Component.class.getName())).isNull();
 		assertThat(metadata.getAnnotationAttributes(MetaAnnotation.class.getName(), false)).isNull();
 		assertThat(metadata.getAnnotationAttributes(MetaAnnotation.class.getName(), true)).isNull();
-		assertThat(metadata.getAnnotatedMethods(DirectAnnotation.class.getName()).size()).isEqualTo(0);
+		assertThat(metadata.getAnnotatedMethods(DirectAnnotation.class.getName())).isEmpty();
 		assertThat(metadata.isAnnotated(IsAnnotatedAnnotation.class.getName())).isFalse();
 		assertThat(metadata.getAllAnnotationAttributes(DirectAnnotation.class.getName())).isNull();
 	}
@@ -141,10 +143,10 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isFalse();
 		assertThat(metadata.hasSuperClass()).isFalse();
 		assertThat(metadata.getSuperClassName()).isNull();
-		assertThat(metadata.getInterfaceNames().length).isEqualTo(2);
+		assertThat(metadata.getInterfaceNames()).hasSize(2);
 		assertThat(metadata.getInterfaceNames()[0]).isEqualTo(ClassMetadata.class.getName());
 		assertThat(metadata.getInterfaceNames()[1]).isEqualTo(AnnotatedTypeMetadata.class.getName());
-		assertThat(metadata.getAnnotationTypes()).hasSize(0);
+		assertThat(metadata.getAnnotationTypes()).isEmpty();
 	}
 
 	@Test
@@ -169,7 +171,7 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isFalse();
 		assertThat(metadata.hasSuperClass()).isFalse();
 		assertThat(metadata.getSuperClassName()).isNull();
-		assertThat(metadata.getInterfaceNames().length).isEqualTo(1);
+		assertThat(metadata.getInterfaceNames()).hasSize(1);
 		assertThat(metadata.getInterfaceNames()[0]).isEqualTo(Annotation.class.getName());
 		assertThat(metadata.isAnnotated(Documented.class.getName())).isFalse();
 		assertThat(metadata.isAnnotated(Scope.class.getName())).isFalse();
@@ -188,8 +190,8 @@ class AnnotationMetadataTests {
 	 * 'true' as is done in the main test above.
 	 */
 	@Test
-	@Deprecated
 	void standardAnnotationMetadata_nestedAnnotationsAsMap_false() {
+		@SuppressWarnings("deprecation")
 		AnnotationMetadata metadata = new StandardAnnotationMetadata(AnnotatedComponent.class);
 		AnnotationAttributes specialAttrs = (AnnotationAttributes) metadata.getAnnotationAttributes(SpecialAttr.class.getName());
 		Annotation[] nestedAnnoArray = (Annotation[]) specialAttrs.get("nestedAnnoArray");
@@ -197,14 +199,14 @@ class AnnotationMetadataTests {
 	}
 
 	@Test
-	@Deprecated
 	void metaAnnotationOverridesUsingStandardAnnotationMetadata() {
+		@SuppressWarnings("deprecation")
 		AnnotationMetadata metadata = new StandardAnnotationMetadata(ComposedConfigurationWithAttributeOverridesClass.class);
 		assertMetaAnnotationOverrides(metadata);
 	}
 
 	@Test
-	void metaAnnotationOverridesUsingAnnotationMetadataReadingVisitor() throws Exception {
+	void metaAnnotationOverridesUsingSimpleAnnotationMetadata() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(ComposedConfigurationWithAttributeOverridesClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
@@ -214,8 +216,8 @@ class AnnotationMetadataTests {
 	private void assertMetaAnnotationOverrides(AnnotationMetadata metadata) {
 		AnnotationAttributes attributes = (AnnotationAttributes) metadata.getAnnotationAttributes(
 				TestComponentScan.class.getName(), false);
+		assertThat(attributes.getStringArray("value")).containsExactly("org.example.componentscan");
 		assertThat(attributes.getStringArray("basePackages")).containsExactly("org.example.componentscan");
-		assertThat(attributes.getStringArray("value")).isEmpty();
 		assertThat(attributes.getClassArray("basePackageClasses")).isEmpty();
 	}
 
@@ -226,7 +228,7 @@ class AnnotationMetadataTests {
 	}
 
 	@Test  // SPR-11649
-	void multipleAnnotationsWithIdenticalAttributeNamesUsingAnnotationMetadataReadingVisitor() throws Exception {
+	void multipleAnnotationsWithIdenticalAttributeNamesUsingSimpleAnnotationMetadata() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(NamedAnnotationsClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
@@ -240,11 +242,115 @@ class AnnotationMetadataTests {
 	}
 
 	@Test  // SPR-11649
-	void composedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingAnnotationMetadataReadingVisitor() throws Exception {
+	void composedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingSimpleAnnotationMetadata() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(NamedComposedAnnotationClass.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
 		assertMultipleAnnotationsWithIdenticalAttributeNames(metadata);
+	}
+
+	@Test  // gh-31041
+	void multipleComposedRepeatableAnnotationsUsingStandardAnnotationMetadata() {
+		AnnotationMetadata metadata = AnnotationMetadata.introspect(MultipleComposedRepeatableAnnotationsClass.class);
+		assertRepeatableAnnotations(metadata);
+	}
+
+	@Test  // gh-31041
+	void multipleComposedRepeatableAnnotationsUsingSimpleAnnotationMetadata() throws Exception {
+		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
+		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(MultipleComposedRepeatableAnnotationsClass.class.getName());
+		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
+		assertRepeatableAnnotations(metadata);
+	}
+
+	@Test  // gh-31074
+	void multipleComposedRepeatableAnnotationsSortedByReversedMetaDistanceUsingStandardAnnotationMetadata() {
+		AnnotationMetadata metadata = AnnotationMetadata.introspect(MultipleComposedRepeatableAnnotationsClass.class);
+		assertRepeatableAnnotationsSortedByReversedMetaDistance(metadata);
+	}
+
+	@Test  // gh-31074
+	void multipleComposedRepeatableAnnotationsSortedByReversedMetaDistanceUsingSimpleAnnotationMetadata() throws Exception {
+		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
+		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(MultipleComposedRepeatableAnnotationsClass.class.getName());
+		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
+		assertRepeatableAnnotationsSortedByReversedMetaDistance(metadata);
+	}
+
+	@Test  // gh-31041
+	void multipleRepeatableAnnotationsInContainersUsingStandardAnnotationMetadata() {
+		AnnotationMetadata metadata = AnnotationMetadata.introspect(MultipleRepeatableAnnotationsInContainersClass.class);
+		assertRepeatableAnnotations(metadata);
+	}
+
+	@Test  // gh-31041
+	void multipleRepeatableAnnotationsInContainersUsingSimpleAnnotationMetadata() throws Exception {
+		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
+		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(MultipleRepeatableAnnotationsInContainersClass.class.getName());
+		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
+		assertRepeatableAnnotations(metadata);
+	}
+
+	/**
+	 * Tests {@code AnnotatedElementUtils#getMergedRepeatableAnnotations()} variants to ensure that
+	 * {@link AnnotationMetadata#getMergedRepeatableAnnotationAttributes(Class, Class, boolean)}
+	 * behaves the same.
+	 */
+	@Test  // gh-31041
+	void multipleComposedRepeatableAnnotationsUsingAnnotatedElementUtils() {
+		Class<?> element = MultipleComposedRepeatableAnnotationsClass.class;
+
+		Set<TestComponentScan> annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class);
+		assertRepeatableAnnotations(annotations);
+
+		annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class, TestComponentScans.class);
+		assertRepeatableAnnotations(annotations);
+	}
+
+	/**
+	 * Tests {@code AnnotatedElementUtils#getMergedRepeatableAnnotations()} variants to ensure that
+	 * {@link AnnotationMetadata#getMergedRepeatableAnnotationAttributes(Class, Class, boolean)}
+	 * behaves the same.
+	 */
+	@Test  // gh-31041
+	void multipleRepeatableAnnotationsInContainersUsingAnnotatedElementUtils() {
+		Class<?> element = MultipleRepeatableAnnotationsInContainersClass.class;
+
+		Set<TestComponentScan> annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class);
+		assertRepeatableAnnotations(annotations);
+
+		annotations = AnnotatedElementUtils.getMergedRepeatableAnnotations(element, TestComponentScan.class, TestComponentScans.class);
+		assertRepeatableAnnotations(annotations);
+	}
+
+	private static void assertRepeatableAnnotations(AnnotationMetadata metadata) {
+		Set<AnnotationAttributes> attributesSet =
+				metadata.getMergedRepeatableAnnotationAttributes(TestComponentScan.class, TestComponentScans.class, true);
+		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("value")).flatMap(Arrays::stream))
+				.containsExactly("A", "B", "C", "D");
+		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("basePackages")).flatMap(Arrays::stream))
+				.containsExactly("A", "B", "C", "D");
+		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("basePackageClasses")).flatMap(Arrays::stream))
+				.containsExactly("java.lang.String", "java.lang.Integer");
+	}
+
+	private static void assertRepeatableAnnotationsSortedByReversedMetaDistance(AnnotationMetadata metadata) {
+		// Note: although the real @ComponentScan annotation is not looked up using
+		// "sortByReversedMetaDistance" semantics, we can still use @TestComponentScan
+		// to verify the expected behavior.
+		Set<AnnotationAttributes> attributesSet =
+				metadata.getMergedRepeatableAnnotationAttributes(TestComponentScan.class, TestComponentScans.class, false, true);
+		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("value")).flatMap(Arrays::stream))
+				.containsExactly("C", "D", "A", "B");
+		assertThat(attributesSet.stream().map(attributes -> attributes.getStringArray("basePackages")).flatMap(Arrays::stream))
+				.containsExactly("C", "D", "A", "B");
+	}
+
+	private static void assertRepeatableAnnotations(Set<TestComponentScan> annotations) {
+		assertThat(annotations.stream().map(TestComponentScan::value).flatMap(Arrays::stream))
+				.containsExactly("A", "B", "C", "D");
+		assertThat(annotations.stream().map(TestComponentScan::basePackages).flatMap(Arrays::stream))
+				.containsExactly("A", "B", "C", "D");
 	}
 
 	@Test
@@ -254,7 +360,7 @@ class AnnotationMetadataTests {
 	}
 
 	@Test
-	void inheritedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingAnnotationMetadataReadingVisitor() throws Exception {
+	void inheritedAnnotationWithMetaAnnotationsWithIdenticalAttributeNamesUsingSimpleAnnotationMetadata() throws Exception {
 		MetadataReaderFactory metadataReaderFactory = new SimpleMetadataReaderFactory();
 		MetadataReader metadataReader = metadataReaderFactory.getMetadataReader(NamedComposedAnnotationExtended.class.getName());
 		AnnotationMetadata metadata = metadataReader.getAnnotationMetadata();
@@ -287,7 +393,7 @@ class AnnotationMetadataTests {
 		assertThat(metadata.isConcrete()).isTrue();
 		assertThat(metadata.hasSuperClass()).isTrue();
 		assertThat(metadata.getSuperClassName()).isEqualTo(Object.class.getName());
-		assertThat(metadata.getInterfaceNames().length).isEqualTo(1);
+		assertThat(metadata.getInterfaceNames()).hasSize(1);
 		assertThat(metadata.getInterfaceNames()[0]).isEqualTo(Serializable.class.getName());
 
 		assertThat(metadata.isAnnotated(Component.class.getName())).isTrue();
@@ -317,9 +423,9 @@ class AnnotationMetadataTests {
 		assertThat(method.getAnnotationAttributes(DirectAnnotation.class.getName()).get("value")).isEqualTo("direct");
 		assertThat(method.getAnnotationAttributes(DirectAnnotation.class.getName()).get("myValue")).isEqualTo("direct");
 		List<Object> allMeta = method.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("value");
-		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct", "meta")));
+		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<>(Arrays.asList("direct", "meta")));
 		allMeta = method.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("additional");
-		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct")));
+		assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<>(List.of("direct")));
 
 		assertThat(metadata.isAnnotated(IsAnnotatedAnnotation.class.getName())).isTrue();
 
@@ -330,12 +436,12 @@ class AnnotationMetadataTests {
 			assertThat(specialAttrs.getEnum("state").equals(Thread.State.NEW)).isTrue();
 
 			AnnotationAttributes nestedAnno = specialAttrs.getAnnotation("nestedAnno");
-			assertThat("na").isEqualTo(nestedAnno.getString("value"));
+			assertThat(nestedAnno.getString("value")).isEqualTo("na");
 			assertThat(nestedAnno.getEnum("anEnum").equals(SomeEnum.LABEL1)).isTrue();
 			assertThat((Class<?>[]) nestedAnno.get("classArray")).isEqualTo(new Class<?>[] {String.class});
 
 			AnnotationAttributes[] nestedAnnoArray = specialAttrs.getAnnotationArray("nestedAnnoArray");
-			assertThat(nestedAnnoArray.length).isEqualTo(2);
+			assertThat(nestedAnnoArray).hasSize(2);
 			assertThat(nestedAnnoArray[0].getString("value")).isEqualTo("default");
 			assertThat(nestedAnnoArray[0].getEnum("anEnum").equals(SomeEnum.DEFAULT)).isTrue();
 			assertThat((Class<?>[]) nestedAnnoArray[0].get("classArray")).isEqualTo(new Class<?>[] {Void.class});
@@ -351,7 +457,7 @@ class AnnotationMetadataTests {
 			assertThat(optional.getClassArray("classArray")).isEqualTo(new Class<?>[] {Void.class});
 
 			AnnotationAttributes[] optionalArray = specialAttrs.getAnnotationArray("optionalArray");
-			assertThat(optionalArray.length).isEqualTo(1);
+			assertThat(optionalArray).hasSize(1);
 			assertThat(optionalArray[0].getString("value")).isEqualTo("optional");
 			assertThat(optionalArray[0].getEnum("anEnum").equals(SomeEnum.DEFAULT)).isTrue();
 			assertThat((Class<?>[]) optionalArray[0].get("classArray")).isEqualTo(new Class<?>[] {Void.class});
@@ -359,11 +465,11 @@ class AnnotationMetadataTests {
 
 			assertThat(metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("value")).isEqualTo("direct");
 			allMeta = metadata.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("value");
-			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct", "meta")));
+			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<>(Arrays.asList("direct", "meta")));
 			allMeta = metadata.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("additional");
-			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct", "")));
+			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<>(Arrays.asList("direct", "")));
 			assertThat(metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("additional")).isEqualTo("");
-			assertThat(((String[]) metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("additionalArray")).length).isEqualTo(0);
+			assertThat(((String[]) metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("additionalArray"))).isEmpty();
 		}
 		{ // perform tests with classValuesAsString = true
 			AnnotationAttributes specialAttrs = (AnnotationAttributes) metadata.getAnnotationAttributes(
@@ -392,7 +498,7 @@ class AnnotationMetadataTests {
 
 			assertThat(metadata.getAnnotationAttributes(DirectAnnotation.class.getName()).get("value")).isEqualTo("direct");
 			allMeta = metadata.getAllAnnotationAttributes(DirectAnnotation.class.getName()).get("value");
-			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<Object>(Arrays.asList("direct", "meta")));
+			assertThat(new HashSet<>(allMeta)).isEqualTo(new HashSet<>(Arrays.asList("direct", "meta")));
 		}
 	}
 
@@ -408,7 +514,7 @@ class AnnotationMetadataTests {
 
 	// -------------------------------------------------------------------------
 
-	public static enum SomeEnum {
+	public enum SomeEnum {
 		LABEL1, LABEL2, DEFAULT
 	}
 
@@ -534,10 +640,20 @@ class AnnotationMetadataTests {
 
 	@Retention(RetentionPolicy.RUNTIME)
 	@Target(ElementType.TYPE)
+	public @interface TestComponentScans {
+
+		TestComponentScan[] value();
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target(ElementType.TYPE)
+	@Repeatable(TestComponentScans.class)
 	public @interface TestComponentScan {
 
+		@AliasFor("basePackages")
 		String[] value() default {};
 
+		@AliasFor("value")
 		String[] basePackages() default {};
 
 		Class<?>[] basePackageClasses() default {};
@@ -549,11 +665,47 @@ class AnnotationMetadataTests {
 	@Target(ElementType.TYPE)
 	public @interface ComposedConfigurationWithAttributeOverrides {
 
+		// Do NOT use @AliasFor here until Spring 6.1
+		// @AliasFor(annotation = TestComponentScan.class)
 		String[] basePackages() default {};
 	}
 
 	@ComposedConfigurationWithAttributeOverrides(basePackages = "org.example.componentscan")
 	public static class ComposedConfigurationWithAttributeOverridesClass {
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target(ElementType.TYPE)
+	@TestComponentScan("C")
+	public @interface ScanPackageC {
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target(ElementType.TYPE)
+	@TestComponentScan("D")
+	public @interface ScanPackageD {
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target(ElementType.TYPE)
+	@TestComponentScans({
+		@TestComponentScan("C"),
+		@TestComponentScan("D")
+	})
+	public @interface ScanPackagesCandD {
+	}
+
+	@TestComponentScan(basePackages = "A", basePackageClasses = String.class)
+	@ScanPackageC
+	@ScanPackageD
+	@TestComponentScan(basePackages = "B", basePackageClasses = Integer.class)
+	static class MultipleComposedRepeatableAnnotationsClass {
+	}
+
+	@TestComponentScan(basePackages = "A", basePackageClasses = String.class)
+	@ScanPackagesCandD
+	@TestComponentScans(@TestComponentScan(basePackages = "B", basePackageClasses = Integer.class))
+	static class MultipleRepeatableAnnotationsInContainersClass {
 	}
 
 	@Retention(RetentionPolicy.RUNTIME)
