@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.web.reactive.result.condition;
 
 import java.util.Arrays;
 import java.util.Iterator;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -31,34 +30,33 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest.get;
 
 /**
- * Unit tests for {@link PatternsRequestCondition}.
+ * Tests for {@link PatternsRequestCondition}.
  *
  * @author Rossen Stoyanchev
  */
-public class PatternsRequestConditionTests {
+class PatternsRequestConditionTests {
 
 	private final PathPatternParser parser = new PathPatternParser();
 
 	@Test
-	public void prependNonEmptyPatternsOnly() {
+	void prependNonEmptyPatternsOnly() {
 		PatternsRequestCondition c = createPatternsCondition("");
 		assertThat(c.getPatterns().iterator().next().getPatternString())
-				.as("Do not prepend empty patterns (SPR-8255)")
-				.isEqualTo("");
+				.as("Do not prepend empty patterns (SPR-8255)").isEmpty();
 	}
 
 	@Test
-	public void combineEmptySets() {
+	void combineEmptySets() {
 		PatternsRequestCondition c1 = new PatternsRequestCondition();
 		PatternsRequestCondition c2 = new PatternsRequestCondition();
 		PatternsRequestCondition c3 = c1.combine(c2);
 
-		assertThat(c3).isSameAs(c1);
 		assertThat(c1.getPatterns()).isSameAs(c2.getPatterns()).containsExactly(this.parser.parse(""));
+		assertThat(c3.toString()).isEqualTo("[/ || ]");
 	}
 
 	@Test
-	public void combineOnePatternWithEmptySet() {
+	void combineOnePatternWithEmptySet() {
 		PatternsRequestCondition c1 = createPatternsCondition("/type1", "/type2");
 		PatternsRequestCondition c2 = new PatternsRequestCondition();
 
@@ -71,7 +69,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void combineMultiplePatterns() {
+	void combineMultiplePatterns() {
 		PatternsRequestCondition c1 = createPatternsCondition("/t1", "/t2");
 		PatternsRequestCondition c2 = createPatternsCondition("/m1", "/m2");
 
@@ -79,7 +77,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void matchDirectPath() {
+	void matchDirectPath() {
 		PatternsRequestCondition condition = createPatternsCondition("/foo");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -88,7 +86,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void matchPattern() {
+	void matchPattern() {
 		PatternsRequestCondition condition = createPatternsCondition("/foo/*");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/bar"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -97,7 +95,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void matchSortPatterns() {
+	void matchSortPatterns() {
 		PatternsRequestCondition condition = createPatternsCondition("/*/*", "/foo/bar", "/foo/*");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/bar"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -107,10 +105,14 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
+	@SuppressWarnings("deprecation")
 	public void matchTrailingSlash() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/"));
 
-		PatternsRequestCondition condition = createPatternsCondition("/foo");
+		PathPatternParser patternParser = new PathPatternParser();
+		patternParser.setMatchOptionalTrailingSeparator(true);
+
+		PatternsRequestCondition condition = new PatternsRequestCondition(patternParser.parse("/foo"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 
 		assertThat(match).isNotNull();
@@ -118,7 +120,7 @@ public class PatternsRequestConditionTests {
 				.as("Should match by default")
 				.isEqualTo("/foo");
 
-		condition = createPatternsCondition("/foo");
+		condition = new PatternsRequestCondition(patternParser.parse("/foo"));
 		match = condition.getMatchingCondition(exchange);
 
 		assertThat(match).isNotNull();
@@ -135,7 +137,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void matchPatternContainsExtension() {
+	void matchPatternContainsExtension() {
 		PatternsRequestCondition condition = createPatternsCondition("/foo.jpg");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo.html"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
@@ -155,7 +157,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void compareToConsistentWithEquals() {
+	void compareToConsistentWithEquals() {
 		PatternsRequestCondition c1 = createPatternsCondition("/foo*");
 		PatternsRequestCondition c2 = createPatternsCondition("/foo*");
 
@@ -163,16 +165,16 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void equallyMatchingPatternsAreBothPresent() {
+	void equallyMatchingPatternsAreBothPresent() {
 		PatternsRequestCondition c = createPatternsCondition("/a", "/b");
-		assertThat(c.getPatterns().size()).isEqualTo(2);
+		assertThat(c.getPatterns()).hasSize(2);
 		Iterator<PathPattern> itr = c.getPatterns().iterator();
 		assertThat(itr.next().getPatternString()).isEqualTo("/a");
 		assertThat(itr.next().getPatternString()).isEqualTo("/b");
 	}
 
 	@Test
-	public void comparePatternSpecificity() {
+	void comparePatternSpecificity() {
 		ServerWebExchange exchange = MockServerWebExchange.from(get("/foo"));
 
 		PatternsRequestCondition c1 = createPatternsCondition("/fo*");
@@ -189,7 +191,7 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
-	public void compareNumberOfMatchingPatterns() {
+	void compareNumberOfMatchingPatterns() {
 		ServerWebExchange exchange = MockServerWebExchange.from(get("/foo.html"));
 
 		PatternsRequestCondition c1 = createPatternsCondition("/foo.*", "/foo.jpeg");
@@ -206,7 +208,7 @@ public class PatternsRequestConditionTests {
 		return new PatternsRequestCondition(Arrays
 				.stream(patterns)
 				.map(this.parser::parse)
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
 }
