@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,10 +27,12 @@ import java.security.Principal;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalLong;
+import java.util.Set;
 
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.Part;
@@ -49,6 +51,7 @@ import org.springframework.http.converter.StringHttpMessageConverter;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
+import org.springframework.validation.BindException;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
 import org.springframework.web.servlet.handler.PathPatternsTestUtils;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
@@ -61,13 +64,13 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 
 /**
+ * Tests for {@link DefaultServerRequest}.
  * @author Arjen Poutsma
- * @since 5.1
  */
 class DefaultServerRequestTests {
 
-	private final List<HttpMessageConverter<?>> messageConverters = Collections.singletonList(
-			new StringHttpMessageConverter());
+	private final List<HttpMessageConverter<?>> messageConverters = List.of(new StringHttpMessageConverter());
+
 
 	@Test
 	void method() {
@@ -84,8 +87,7 @@ class DefaultServerRequestTests {
 		servletRequest.setScheme("https");
 		servletRequest.setServerPort(443);
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.uri()).isEqualTo(URI.create("https://example.com/"));
 	}
@@ -95,8 +97,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/path", true);
 		servletRequest.setQueryString("a=1");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		URI result = request.uriBuilder().build();
 		assertThat(result.getScheme()).isEqualTo("http");
@@ -111,10 +112,49 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setAttribute("foo", "bar");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThat(request.attribute("foo")).isEqualTo(Optional.of("bar"));
+		assertThat(request.attribute("foo")).contains("bar");
+	}
+
+	@Test
+	void attributes() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		servletRequest.setAttribute("foo", "bar");
+		servletRequest.setAttribute("baz", "qux");
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Map<String, Object> attributesMap = request.attributes();
+		assertThat(attributesMap).isNotEmpty();
+		assertThat(attributesMap).containsEntry("foo", "bar");
+		assertThat(attributesMap).containsEntry("baz", "qux");
+		assertThat(attributesMap).doesNotContainEntry("foo", "blah");
+
+		Set<Map.Entry<String, Object>> entrySet = attributesMap.entrySet();
+		assertThat(entrySet).isNotEmpty();
+		assertThat(entrySet).hasSize(attributesMap.size());
+		assertThat(entrySet).contains(Map.entry("foo", "bar"));
+		assertThat(entrySet).contains(Map.entry("baz", "qux"));
+		assertThat(entrySet).doesNotContain(Map.entry("foo", "blah"));
+		assertThat(entrySet).isUnmodifiable();
+
+		assertThat(entrySet.iterator()).toIterable().contains(Map.entry("foo", "bar"), Map.entry("baz", "qux"));
+		Iterator<String> attributes = servletRequest.getAttributeNames().asIterator();
+		Iterator<Map.Entry<String, Object>> entrySetIterator = entrySet.iterator();
+		while (attributes.hasNext()) {
+			attributes.next();
+			assertThat(entrySetIterator).hasNext();
+			entrySetIterator.next();
+		}
+		assertThat(entrySetIterator).isExhausted();
+
+		attributesMap.clear();
+		assertThat(attributesMap).isEmpty();
+		assertThat(attributesMap).hasSize(0);
+		assertThat(entrySet).isEmpty();
+		assertThat(entrySet).hasSize(0);
+		assertThat(entrySet.iterator()).isExhausted();
 	}
 
 	@Test
@@ -122,10 +162,9 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "bar");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThat(request.param("foo")).isEqualTo(Optional.of("bar"));
+		assertThat(request.param("foo")).contains("bar");
 	}
 
 	@Test
@@ -137,8 +176,7 @@ class DefaultServerRequestTests {
 		servletRequest.addPart(formPart);
 		servletRequest.addPart(filePart);
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		MultiValueMap<String, Part> result = request.multipartData();
 
@@ -152,10 +190,9 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThat(request.param("foo")).isEqualTo(Optional.of(""));
+		assertThat(request.param("foo")).contains("");
 	}
 
 	@Test
@@ -163,21 +200,18 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThat(request.param("bar")).isEqualTo(Optional.empty());
+		assertThat(request.param("bar")).isNotPresent();
 	}
 
 	@Test
 	void pathVariable() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.pathVariable("foo")).isEqualTo("bar");
 	}
@@ -186,25 +220,20 @@ class DefaultServerRequestTests {
 	void pathVariableNotFound() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				request.pathVariable("baz"));
+		assertThatIllegalArgumentException().isThrownBy(() -> request.pathVariable("baz"));
 	}
 
 	@Test
 	void pathVariables() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.pathVariables()).isEqualTo(pathVariables);
 	}
@@ -212,8 +241,7 @@ class DefaultServerRequestTests {
 	@Test
 	void header() {
 		HttpHeaders httpHeaders = new HttpHeaders();
-		List<MediaType> accept =
-				Collections.singletonList(MediaType.APPLICATION_JSON);
+		List<MediaType> accept = Collections.singletonList(MediaType.APPLICATION_JSON);
 		httpHeaders.setAccept(accept);
 		List<Charset> acceptCharset = Collections.singletonList(UTF_8);
 		httpHeaders.setAcceptCharset(acceptCharset);
@@ -230,14 +258,13 @@ class DefaultServerRequestTests {
 		httpHeaders.forEach(servletRequest::addHeader);
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		ServerRequest.Headers headers = request.headers();
 		assertThat(headers.accept()).isEqualTo(accept);
 		assertThat(headers.acceptCharset()).isEqualTo(acceptCharset);
 		assertThat(headers.contentLength()).isEqualTo(OptionalLong.of(contentLength));
-		assertThat(headers.contentType()).isEqualTo(Optional.of(contentType));
+		assertThat(headers.contentType()).contains(contentType);
 		assertThat(headers.header(HttpHeaders.CONTENT_TYPE)).containsExactly(MediaType.TEXT_PLAIN_VALUE);
 		assertThat(headers.firstHeader(HttpHeaders.CONTENT_TYPE)).isEqualTo(MediaType.TEXT_PLAIN_VALUE);
 		assertThat(headers.asHttpHeaders()).isEqualTo(httpHeaders);
@@ -250,8 +277,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setCookies(cookie);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		MultiValueMap<String, Cookie> expected = new LinkedMultiValueMap<>();
 		expected.add("foo", cookie);
@@ -266,8 +292,7 @@ class DefaultServerRequestTests {
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 		servletRequest.setContent("foo".getBytes(UTF_8));
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		String result = request.body(String.class);
 		assertThat(result).isEqualTo("foo");
@@ -280,25 +305,22 @@ class DefaultServerRequestTests {
 		servletRequest.setContent("[\"foo\",\"bar\"]".getBytes(UTF_8));
 
 		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				Collections.singletonList(new MappingJackson2HttpMessageConverter()));
+				List.of(new MappingJackson2HttpMessageConverter()));
 
-		List<String> result = request.body(new ParameterizedTypeReference<List<String>>() {});
-		assertThat(result.size()).isEqualTo(2);
-		assertThat(result.get(0)).isEqualTo("foo");
-		assertThat(result.get(1)).isEqualTo("bar");
+		List<String> result = request.body(new ParameterizedTypeReference<>() {});
+		assertThat(result).containsExactly("foo", "bar");
 	}
 
 	@Test
-	void bodyUnacceptable() throws Exception {
+	void bodyUnacceptable() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 		servletRequest.setContent("foo".getBytes(UTF_8));
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, Collections.emptyList());
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, Collections.emptyList());
 
-		assertThatExceptionOfType(HttpMediaTypeNotSupportedException.class).isThrownBy(() ->
-				request.body(String.class));
+		assertThatExceptionOfType(HttpMediaTypeNotSupportedException.class)
+				.isThrownBy(() -> request.body(String.class));
 	}
 
 	@Test
@@ -307,11 +329,9 @@ class DefaultServerRequestTests {
 		MockHttpSession session = new MockHttpSession();
 		servletRequest.setSession(session);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.session()).isEqualTo(session);
-
 	}
 
 	@Test
@@ -320,14 +340,78 @@ class DefaultServerRequestTests {
 		Principal principal = () -> "foo";
 		servletRequest.setUserPrincipal(principal);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThat(request.principal().get()).isEqualTo(principal);
+		assertThat(request.principal()).contains(principal);
 	}
 
+	@Test
+	void bindToConstructor() throws BindException {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		servletRequest.addParameter("foo", "FOO");
+		servletRequest.addParameter("bar", "BAR");
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		ConstructorInjection result = request.bind(ConstructorInjection.class);
+		assertThat(result.getFoo()).isEqualTo("FOO");
+		assertThat(result.getBar()).isEqualTo("BAR");
+	}
+
+	@Test
+	void bindToProperties() throws BindException {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		servletRequest.addParameter("foo", "FOO");
+		servletRequest.addParameter("bar", "BAR");
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		PropertyInjection result = request.bind(PropertyInjection.class);
+		assertThat(result.getFoo()).isEqualTo("FOO");
+		assertThat(result.getBar()).isEqualTo("BAR");
+	}
+
+	@Test
+	void bindToMixed() throws BindException {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		servletRequest.addParameter("foo", "FOO");
+		servletRequest.addParameter("bar", "BAR");
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		MixedInjection result = request.bind(MixedInjection.class);
+		assertThat(result.getFoo()).isEqualTo("FOO");
+		assertThat(result.getBar()).isEqualTo("BAR");
+	}
+
+	@Test
+	void bindCustomizer() throws BindException {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		servletRequest.addParameter("foo", "FOO");
+		servletRequest.addParameter("bar", "BAR");
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		PropertyInjection result = request.bind(PropertyInjection.class, dataBinder -> dataBinder.setAllowedFields("foo"));
+		assertThat(result.getFoo()).isEqualTo("FOO");
+		assertThat(result.getBar()).isNull();
+	}
+
+	@Test
+	void bindError() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		servletRequest.addParameter("foo", "FOO");
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		assertThatExceptionOfType(BindException.class).isThrownBy(() ->
+			request.bind(ErrorInjection.class)
+		);
+	}
+
+
 	@ParameterizedHttpMethodTest
-	void checkNotModifiedTimestamp(String method) throws Exception {
+	void checkNotModifiedTimestamp(String method) {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
 		Instant now = Instant.now().truncatedTo(ChronoUnit.SECONDS);
 		servletRequest.addHeader(HttpHeaders.IF_MODIFIED_SINCE, now.toEpochMilli());
@@ -507,6 +591,90 @@ class DefaultServerRequestTests {
 	@ParameterizedTest(name = "[{index}] {0}")
 	@ValueSource(strings = { "GET", "HEAD" })
 	@interface ParameterizedHttpMethodTest {
+	}
+
+
+	@SuppressWarnings("unused")
+	private static final class ConstructorInjection {
+
+		private final String foo;
+
+		private final String bar;
+
+		public ConstructorInjection(String foo, String bar) {
+			this.foo = foo;
+			this.bar = bar;
+		}
+
+		public String getFoo() {
+			return this.foo;
+		}
+
+		public String getBar() {
+			return this.bar;
+		}
+	}
+
+	@SuppressWarnings("unused")
+	private static final class PropertyInjection {
+
+		private String foo;
+
+		private String bar;
+
+		public String getFoo() {
+			return this.foo;
+		}
+
+		public void setFoo(String foo) {
+			this.foo = foo;
+		}
+
+		public String getBar() {
+			return this.bar;
+		}
+
+		public void setBar(String bar) {
+			this.bar = bar;
+		}
+	}
+
+	@SuppressWarnings("unused")
+	private static final class MixedInjection {
+
+		private final String foo;
+
+		private String bar;
+
+		public MixedInjection(String foo) {
+			this.foo = foo;
+		}
+
+		public String getFoo() {
+			return this.foo;
+		}
+
+		public String getBar() {
+			return this.bar;
+		}
+
+		public void setBar(String bar) {
+			this.bar = bar;
+		}
+	}
+
+	@SuppressWarnings("unused")
+	private static final class ErrorInjection {
+
+		private int foo;
+
+		public int getFoo() {
+			return this.foo;
+		}
+
+		public void setFoo(int foo) {
+			this.foo = foo;
+		}
 	}
 
 }
